--- a/index.html
+++ b/index.html
@@ -7,6 +7,42 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="page">
+        <section class="title">
+            <h6>SUA PRÓXIMA VIAGEM:</h6>
+            <h1>Conheça Busan</h1>
+        </section>
+        <section class="main_img">
+            <img src="" alt="Foto de Busan">
+            <p>
+                Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. 
+                Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.
+            </p>
+        </section>
+        <section class="content">
+            <h6>PARA OS AMATES DE HISTÓRIA</h6>
+            <h2>Descubra 3 destinos imperdíveis em Busan</h2>
+            <p>
+                As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. 
+                Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar 
+                bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos.
+                Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.
+            </p>
+            <section class="content_list">
+                <img src="" alt="Templo Haedong Yonggungsa">
+                <h3>1. Templo Haedong Yonggungsa</h3>
+                <p>
+                    O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. 
+                    Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. 
+                </p>
+                <h4>Bom para:</h4>
+                <ul>
+                    <li>História</li>
+                </ul>
+                <img src="" alt="Templo Beomeo-sa">
+
+            </section>
+        </section>
+    </div>
 </body>
 </html>
